# Advanced-AI

./: .gitignore  mkdocs.yml  pyproject.toml
PP1: GPT2/: README.md  model.py  sample.py
PP5: Pretraining GPT2/: README.md  model.py  sample.py  train.py
PP5: Pretraining GPT2/config/: finetune_french_philosophy.py  train_french_philosophy.py
PP5: Pretraining GPT2/sbatch_scripts/: template.sbatch  test_sbatch.py
PP6:SSL/: ssl_part1_pretext_tasks.ipynb  ssl_part2_simclr.ipynb  ssl_part2_simclr_solution.ipynb
PP7: VLM warmup/: download.py  generate.py  run_job.sbatch  train.py
PP7: VLM warmup/data/: __init__.py  collators.py  datasets.py  processors.py
PP7: VLM warmup/models/: __init__.py  config.py  modality_projector.py  modality_projector_solution.py  utils.py  vision_language.py  vision_language_model.py  vision_language_solution.py
PP9: Alignment/: dpo_reinforce.ipynb  dpo_reinforce_solutions.ipynb
Project/: .gitignore  eval_mmstar.py  git_steps.txt  infer.py  prepare_datasets.py  pyproject.toml  test_data_loading.py  train.py  train.sbatch
Project/api/: Dockerfile  main.py  model.py  pyproject.toml  schemas.py
Project/data/: old_dataset.py
Project/eval_results/: mmstar_best_step1000.json  test.json
Project/models/: config.py  language_model.py  modality_projector.py  vision_language_model.py  vision_transformer.py
Project/scripts/: first_train.sbatch
Project/tests/: test_data_loading.py  test_eval_mmstar.py  test_language_model.py  test_modality_projector.py  test_pretrained_loading.py  test_vision_transformer.py  test_vlm.py
Project/ui/: .dockerignore  Dockerfile  app.py  client.py  pyproject.toml
docs/: index.md  lecture_notes.md  project.md  turpan_cheatsheet.md
(+21 files in other folders)
